[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.11"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
spl-token = "4.0"
base58 = "0.2"
base64 = "0.21"
thiserror = "1.0"
solana-program = "1.17"
